2007-01-13  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_http_request_settimeout() and cg_http_request_gettimeout().
	* Added cg_http_response_settimeout() and cg_http_response_gettimeout().
	* Added cg_http_server_settimeout() and cg_http_server_gettimeout().

2006-12-06  Satoshi Konno <skonno@cybergarage.org>
	* v2.0

2006-11-13  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_net_interface_setnetmask() and cg_net_interface_getnetmask().

2006-10-31  Mikael Saarenpaa <ext-mikael.saarenpaa@nokia.com>
	* Removed deadlock from ipchanged routine.
	* Added rough but useful mutex debugging code.

2006-10-23  Mikael Saarenpaa <ext-mikael.saarenpaa@nokia.com>
	* Allowing M-POST messages to be handled correctly.

2006-10-18  Satoshi Konno <skonno@cybergarage.org>
	* Added some changes for the compiler warnings.

2006-10-17  Satoshi Konno <skonno@cybergarage.org>
	* Added some changed to compile using Visual C++ 6.0 and
	  Visual Studio 2005 normally on WindowsXP.
	* Invalidated all functions in clog.c and ccond.c on 
	  Windows Platform for a instance.

2006-10-16  Mikael Saarenpaa <ext-mikael.saarenpaa@nokia.com>
	* Fixed memory leak from ipchanged routine.

2006-10-12  Satoshi Konno <skonno@cybergarage.org>
	* Changed to compile using ISO-C99 normally.
	* Added cg_xml_node_remove() to cxml.h.
	* Added --copy to libtoolize.

2006-10-05  Mikael Saarenpaa <ext-mikael.saarenpaa@nokia.com>
	* Fixed a naming problem introduced by merge.
	* Fixed notification sequence number initialization when new
	  subscriber is created.
	* (Version number and Debian changelog updated)

2006-10-03  Mikael Saarenpaa <ext-mikael.saarenpaa@nokia.com>
	* Removed (debug) printfs from ip_changed routine.
	* Fixed memory leak from cg_libxml2_parsewrapper
	* Fixed memory leak from cg_net_selectaddr
	* Fixed memory leak from cg_net_url_getupnpbasepath
	* Fixed crash when using DUN IAP
	* Added API calls to query and set user agent field in http
	  requests.
